Resolved issue - webpage overflows when margin and padding are added to an element of height 100%  - top margin and padding were causing the issue.  - Also, box-sizing: border-box helped keep elements padding within itself, not expanding outside

--- a/src/components/MyPicture.css
+++ b/src/components/MyPicture.css
@@ -11,8 +11,8 @@
 	height: 250px;
 	border-radius: 50%;
 
-	box-shadow: 0 0 25px 10px rgba(0, 255, 204, 0.5) /* Inner glow */,
-		0 0 50px 25px rgba(0, 115, 255, 0.5); /* Outer glow */
+	box-shadow: 0 0 30px 10px rgba(0, 255, 204, 0.5) /* Inner glow */,
+		0 0 60px 30px rgba(0, 115, 255, 0.5); /* Outer glow */
 	background: linear-gradient(145deg, #00ffcc, #0073ff); /* Subtle gradient */
 	overflow: hidden; /* Ensures no part of the image exceeds the circle */
 }
